[package]
name = "quick_fabric"
version = "0.1.0"
edition = "2021"
authors = ["Iru21"]
description = "A squick fabric loader installer"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
curl = "0.4.41"