[package]
name = "quick_fabric"
version = "0.1.2"
edition = "2021"
authors = ["Iru21"]
description = "A quick fabric loader installer"
repository = "https://github.com/Iru21/quick_fabric"
documentation = "https://github.com/Iru21/quick_fabric/blob/master/README.md"
license = "MIT"
homepage = "https://github.com/Iru21/quick_fabric"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
curl = "0.4.41"
dirs = "4.0"